<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.longtruong.ltruong58.shippingcalculator.MainActivity"
    android:id="@+id/shippingRelativeLayout"
    android:background="@drawable/shipping_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_textview"
        android:id="@+id/titleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="30sp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/weightEditText"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textAlignment="center">
            <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_textview"
        android:id="@+id/noteTextView"
        android:layout_below="@+id/weightEditText"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_base_cost"
        android:id="@+id/labelBaseCostTextView"
        android:layout_below="@+id/noteTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="12dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_added_cost"
        android:id="@+id/labelAddedCostTextView"
        android:layout_below="@+id/labelBaseCostTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="12dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_total_cost"
        android:id="@+id/labelTotalCostTextView"
        android:layout_below="@+id/labelAddedCostTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="12dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value_cost"
        android:id="@+id/baseCostTextView"
        android:layout_alignTop="@+id/labelBaseCostTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="12dp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value_cost"
        android:id="@+id/addedCostTextView"
        android:layout_below="@+id/baseCostTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="12dp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value_cost"
        android:id="@+id/totalCostTextView"
        android:layout_below="@+id/addedCostTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="12dp"
        android:textColor="#000000"
        android:textStyle="bold" />
</RelativeLayout>
